--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>de.simplytest</groupId>
-    <artifactId>playwright-pom</artifactId>
+    <artifactId>java-playwright-testng-allure</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
